# manim_ec

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: _test_arrows.py  _test_default.py  ad_as_example.py  is_lm_example.py  linked_example.py  main.py  solow_example.py
src/manim_ec/: __init__.py  ad_as.py  base.py  is_lm.py  linked.py  solow.py  supply_demand.py
